feat: update Azure Open AI method

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,5 @@
 
 BAICHUAN_KEY = "sk-aa21f32979e6fd0b13b61e1409b02f5a"
 DEEPSEEK_KEY = "sk-f5eec0b8b432416b8149918c232b5140"
+
+AZURE_OPENAI_KEY = "8a2be5b1d6524e34867a8e08f21fa8b4"
